syntax = "proto3";

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "masjid_service.proto";

package limestone;

option go_package = "github.com/mnadev/limestone/internal/transport/grpc";

service AdhanService {
  rpc CreateAdhan(CreateAdhanFileRequest) returns (StandardAdhanResponse) {
    option (google.api.http) = {
      post: "/v1/adhan"
      body: "adhan_file"
    };
    option (google.api.method_signature) = "adhan_file";
  }
  rpc UpdateAdhan(UpdateAdhanFileRequest) returns (StandardAdhanResponse) {
    option (google.api.http) = {
      patch: "/v1/adhan/{id}"
      body: "adhan_file"
    };
    option (google.api.method_signature) = "adhan_file";
  }
  rpc GetAdhanById(GetAdhanFileRequest) returns (StandardAdhanResponse) {
    option (google.api.http) = {
      get: "/v1/adhan/{id}"
    };
    option (google.api.method_signature) = "id";
  }
  rpc DeleteAdhan(DeleteAdhanFileRequest) returns (StandardAdhanResponse) {
    option (google.api.http) = {
      delete: "/v1/adhan/{id}"
    };
    option (google.api.method_signature) = "id";
  }
}

// When the user logs in to the app, we want to save their adhan preferences.
// We want to save the adhan file id and the prayer times configuration or masjid id.
// If the masjid id is provided, we will use the masjid's prayer times configuration.
// We need to create CRUD for this.
message SavedUserAdhanPreferences {
  string id = 1;
  string user_id = 2;
  string adhan_file_id = 3;
  oneof configuration {
    Masjid.PrayerTimesConfiguration prayer_times_configuration = 6;
    string masjid_id = 7;
  }
  google.protobuf.Timestamp create_time = 4;
  google.protobuf.Timestamp update_time = 5;
}

message StandardAdhanResponse {
  string code = 1;
  string status = 2;
  string message = 3;
  oneof data {
    AdhanFile adhan_file = 4;
    DeleteAdhanFileResponse delete_adhan_file_response = 5;
  }
}

message AdhanFile {
  string id = 1;
  string masjid_id = 2;
  bytes file = 3;
  google.protobuf.Timestamp create_time = 4;
  google.protobuf.Timestamp update_time = 5;
}

message CreateAdhanFileRequest {
  AdhanFile adhan_file = 1 [(google.api.field_behavior) = REQUIRED];
}

message UpdateAdhanFileRequest {
  string id = 1;
  AdhanFile adhan_file = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetAdhanFileRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteAdhanFileRequest {
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message DeleteAdhanFileResponse {}